# hugin-native

./: .eslintrc.js  .gitattributes  .gitignore  .gitmodules  Gemfile  README.md  TODO.md  app.json  babel.config.js  index.js  metro.config.js  package-lock.json  package.json  react-native.config.js  shim.js  todo.todo  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: android-build.yml  android-release.yml
android/: build.gradle  gradle.properties  link-assets-manifest.json  settings.gradle
android/app/: build.gradle
android/app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  Java.cpp  Java.h  OnLoad.cpp  TurtleCoin.cpp  crypto-ops.cpp  crypto-ops.h  crypto.h  hash.cpp  kryptokrona.cpp  kryptokrona.h
bare/: account.js  beam.js  builtins.json  bundle.js.h  bundle.js.h.d  hello-bare.cc  hypercore.js  main.js  messages.js  pow-utils.js  rpc.js  runtime.js  storage.js  swarm.js  syncer.js  utils.js
ios/: Podfile  kryptomodule.mm
ios/HelloBare/: HelloBare-Bridging-Header.h  HelloBare.h  HelloBare.mm  HelloBare.podspec  HelloBareModule.swift
ios/Hugin/: AppDelegate.h  AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/Hugin.xcodeproj/: project.pbxproj
ios/Hugin.xcworkspace/: contents.xcworkspacedata
ios/HuginTests/: HuginTests.m
ios/TurtleCoinModule/: StringTools.cpp  TurtleCoinModule.mm  TurtleCoinModule.podspec  crypto-ops.h  crypto.h  cryptomodule.h  hash.cpp
ios/crypto/: CryptoTypes.h  StringTools.h  TurtleCoinModule.h  TurtleCoinModule.mm  TurtleCoinModule.podspec  aesb.c  crypto-ops.cpp  crypto.cpp  crypto.h  crypto.mm  hash.h  kryptokrona.cpp  kryptokrona.h  multisig.cpp  multisig.h  slow-hash-arm.c  slow-hash-common.h  slow-hash-portable.c
ios/krypto/: Java.cpp  crypto.h
lib/: native.js  native.ts  rpc.js
modules/hello-bare/: expo-module.config.json  index.ts
patches/: @supersami+rn-foreground-service+2.2.1.patch  bare-link+1.0.11.patch  bindings+1.5.0.patch  buffer+4.9.2.patch  hyperbeam+3.0.2.patch  hyperdht+6.15.1.patch  hyperswarm-hugin+1.0.4.patch  kryptokrona-crypto+1.0.2.patch  kryptokrona-crypto+1.0.3+001+initial.patch  kryptokrona-crypto+1.0.3.patch  kryptokrona-wallet-backend-js+2.5.7.patch  react-native-background-fetch+4.2.7.patch  react-native-callkeep+4.3.16.patch  react-native-reanimated+4.0.2.patch  request+2.88.2.patch
src/: App.tsx  groups.json
src/assets/: flags.ts
src/components/: balance.tsx  call-floater.tsx  call-modal.tsx  call-user-item.tsx  card.tsx  emoji-picker.tsx  empty-placeholder.tsx  error-boundary.tsx  feed-message-item.tsx  full-screen-image.tsx  full-screen-video.tsx  glider.tsx  group-invite.tsx  group-message-item.tsx  group-online-indicator.tsx  index.ts  loading-bar.tsx  message-input.tsx  message-item.tsx  message-preview-item.tsx  preview-item.tsx  progressbar.tsx  qr-code-display.tsx  qr-scanner.tsx  screen-header.tsx  screen-header.tsx.md  screen-layout.tsx  seed.tsx  separator.tsx  settings-item.tsx  sync.tsx  transaction.tsx  (+2 more)
(+267 files in other folders)
